Fix T69782: crash using gizmos in grease pencil edit mode